DRILL-7614: Try to add some helpful tips to Testing.md
closes #2003